# Streamlit-Earthquake-App

./: README.md  app.py  pyproject.toml  requirements.txt
